[package]
name = "learn-bevy"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = '0.11.0'
fake = { version = "2.6", features=['derive']}
rand = "0.8.5"
bevy_egui = "0.21"
bevy-inspector-egui = "0.19"
egui_dock = "0.6.3"
bevy_asset = "0.11.0"
bevy_reflect = "0.11.0"
bevy_render = "0.11.0"
bevy_window = "0.11.0"
egui-gizmo = "0.11.0"
egui = "0.22.0"
bevy_ui = "0.11.0"
bevy_xpbd_2d = "0.2"